--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Page</title>
     <link rel="icon" type="image/x-icon" href="../Recipe-Page/images/favicon-32x32.png">
+    <link rel="stylesheet" href="../Recipe-Page/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <section>
@@ -14,9 +21,9 @@
         <article>
             <h3>Preparation time</h3>
             <ul>
-                <li><span>total: </span>Approximateky 10 minutes</li>
-                <li><span>preparation: </span>5 minutes</li>
-                <li><span>cooking: </span>5 minutes</li>
+                <li><span>Total: </span>Approximateky 10 minutes</li>
+                <li><span>Preparation: </span>5 minutes</li>
+                <li><span>Cooking: </span>5 minutes</li>
             </ul>
         </article>
         <div class="ingredients">
@@ -29,17 +36,19 @@
                 <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
             </ul>
         </div>
+        <hr>
         <div class="instructions">
             <h2>instructions</h2>
             <ol>
-                <li><span>beat the eggs:</span>In a bowl, beat the</li>
-                <li><span>heat the pan:</span>In a bowl, beat the</li>
-                <li><span>cook the omelette:</span>In a bowl, beat the</li>
-                <li><span>add fillings (optional):</span>In a bowl, beat the</li>
-                <li><span>fold and serve:</span>In a bowl, beat the</li>
-                <li><span>enjoy:</span>In a bowl, beat the</li>
+                <li><span>Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
+                <li><span>Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil,</li>
+                <li><span>Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
+                <li><span>Add fillings (optional):</span> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
+                <li><span>Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
+                <li><span>Enjoy:</span> Serve hot, with additional solt and pepper if needed.</li>
             </ol>
         </div>
+        <hr>
         <div class="nutrition">
             <h2>nutrition</h2>
             <p>The table below shows nutrition values per serving without the additional fillings.</p>
