--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Page</title>
     <link rel="icon" type="image/x-icon" href="../Recipe-Page/images/favicon-32x32.png">
-    <link rel="stylesheet" href="../Recipe-Page/css/style.css">
+    <link rel="stylesheet" href="../Recipe-Page/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
