--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
             <table>
                 <tr>
                     <td>calories</td>
-                    <td>277kcal</td>
+                    <td class="value">277kcal</td>
                 </tr>
                 <tr>
                     <td>carbs</td>
-                    <td>0g</td>
+                    <td class="value">0g</td>
                 </tr>
                 <tr>
                     <td>protein</td>
-                    <td>20g</td>
+                    <td class="value">20g</td>
                 </tr>
                 <tr>
                     <td>fat</td>
-                    <td>22g</td>
+                    <td class="value">22g</td>
                 </tr>
             </table>
         </div>
